2010-01-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Do not show the browser fields on the preferences
	page for Windows as we do not use this on that platform.
	* tkchat.tcl: Applied patch 2913790 to add an option not to get
	queried when exiting and enable /quit when not logged in (stu)

2010-01-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fix buggy initialization of the browser list
	when nothing specified. Problem spotted by ferrieux.

2009-12-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: [wm state] doesn't support zoomed on x11.
	* tkchat.tcl: change web browser handling to look for a more
	modern list of commands and avoid the old -remote stuff.

2009-10-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fix typo spotted by mistachkin.

2009-09-24  Reinhard Max  <max@suse.de>

	* tkchat.tcl (::tkchat::Smile): Unset IMGre before reinitializing
	the emoticons, or it will keep growing. Only reinitialize when it
	was explicitly asked for (i.e. not on re-logins).

2009-08-12  Elchonon Edelson <eee@users.sourceforge.net>

	* tkchat.tcl: Fix [Bug 2814771]. In color configuration dialog,
	the wrong row was being given the weight for resize.

2009-07-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Do not post when in lurk mode (handle bindings).

2009-06-02  Reinhard Max  <max@suse.de>

	* tkchat.tcl (::tkchat::Progress): Improved progress bar handling.
	This hopefully fixes the occasional spinning of the progress bar
	when the associated action has long finished.

2009-05-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fixed string/list confusion in the message parsing
	that mishandled nick changes from irc.

2009-05-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Tidied up feature discovery and xep0115 caps support
	and ensure we handle conversation threads for chat sessions.

2009-05-24  Pat Thoyts  <patthoyts@users.sourceforge.net>
